<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/a_parameter"
            android:layout_marginEnd="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/a_parameter_label" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/b_paremater"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/b_paremater"
            android:layout_marginEnd="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_parameter_label" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/c_parameter"/>
    <EditText
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/c_parameter"
            android:layout_marginEnd="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/c_parameter_label" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/discriminant_text"/>
    <Button
            android:text="@string/solve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/solve_button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:onClick="onSolve"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/discriminant_text" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/x1_text" android:textStyle="bold" android:textSize="30sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/x1_text" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/x2_text" android:textStyle="bold" android:textSize="30sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/x2_text" app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginStart="8dp" android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold" android:textSize="30sp"/>
    <TextView
            android:text="@string/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/discriminant_text"
            android:textStyle="bold" android:textSize="30sp"/>
    <TextView
            android:text="@string/x1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/textView5" app:layout_constraintBaseline_toBaselineOf="@+id/x1_text"
            android:textStyle="bold" android:textSize="30sp"/>
    <TextView
            android:text="@string/x2"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/textView6" app:layout_constraintBaseline_toBaselineOf="@+id/x2_text"
            android:textStyle="bold" android:textSize="30sp"/>
    <TextView
            android:text="@string/a"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/a_parameter_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textStyle="bold" android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/a_parameter"/>
    <TextView
            android:text="@string/b"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/b_parameter_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textStyle="bold" android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/b_paremater"/>
    <TextView
            android:text="@string/c"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/c_parameter_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textStyle="bold" android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/c_parameter"/>
    <TextView
            android:text="Ax^2+Bx+C=0"
            android:layout_width="0dp"
            android:layout_height="46dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/title_text" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/a_parameter"
            android:textStyle="bold" android:textSize="36sp" android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>